--- a/app/src/main/res/values/blueprint_configs.xml
+++ b/app/src/main/res/values/blueprint_configs.xml
@@ -17,7 +17,7 @@
 <!--suppress CheckTagEmptyBody -->
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Icon Pack designer/owner e-mail -->
-    <string name="email">someone@email.com</string>
+    <string name="email">jonyg1355@gmail.com</string>
 
     <!-- Mail subjects for simple e-mail and requests e-mail -->
     <string name="email_subject">Blueprint</string>
